force-app/main/default/objects/ssot__CoverageBenefit__dlm/fields/ssot__InNetworkFamilyOOPRemainingAmount__c.field-meta.xml
<CustomField>
    <fullName>ssot__InNetworkFamilyOOPRemainingAmount__c</fullName>
    <label>In Network Family OOP Remaining Amount</label>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <masterLabel>In Network Family OOP Remaining Amount</masterLabel>
        <refAttrDeveloperName>InNetworkFamilyOOPRemainingAmount</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>