force-app/main/default/objects/ssot__CoverageBenefit__dlm/fields/ssot__InNetworkIndividualOutofPocketAmt__c.field-meta.xml
<CustomField>
    <fullName>ssot__InNetworkIndividualOutofPocketAmt__c</fullName>
    <label>In Network Individual Outof Pocket Amt</label>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <masterLabel>In Network Individual Outof Pocket Amt</masterLabel>
        <refAttrDeveloperName>InNetworkIndividualOutofPocketAmt</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>