force-app/main/default/objects/ssot__CoverageBenefit__dlm/fields/ssot__INNIndividualDeductibleRemainingAmt__c.field-meta.xml
<CustomField>
    <fullName>ssot__INNIndividualDeductibleRemainingAmt__c</fullName>
    <label>INN Individual Deductible Remaining Amt</label>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <masterLabel>INN Individual Deductible Remaining Amt</masterLabel>
        <refAttrDeveloperName>INNIndividualDeductibleRemainingAmt</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>