force-app/main/default/objects/ssot__CoverageBenefit__dlm/fields/ssot__InNtwkFamilyOutofPocketLimitAmt__c.field-meta.xml
<CustomField>
    <fullName>ssot__InNtwkFamilyOutofPocketLimitAmt__c</fullName>
    <label>In Ntwk Family Outof Pocket Limit Amt</label>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <masterLabel>In Ntwk Family Outof Pocket Limit Amt</masterLabel>
        <refAttrDeveloperName>InNtwkFamilyOutofPocketLimitAmt</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>