force-app/main/default/objects/ssot__CoverageBenefit__dlm/fields/ssot__OutofNtwkFamilyOutofPocketLmtAmt__c.field-meta.xml
<CustomField>
    <fullName>ssot__OutofNtwkFamilyOutofPocketLmtAmt__c</fullName>
    <label>Outof Ntwk Family Outof Pocket Lmt Amt</label>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <masterLabel>Outof Ntwk Family Outof Pocket Lmt Amt</masterLabel>
        <refAttrDeveloperName>OutofNtwkFamilyOutofPocketLmtAmt</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>