force-app/main/default/objects/ssot__CoverageBenefit__dlm/fields/ssot__OutofNtwkFamilyOutofPocketRemainingAmt__c.field-meta.xml
<CustomField>
    <fullName>ssot__OutofNtwkFamilyOutofPocketRemainingAmt__c</fullName>
    <label>Outof Ntwk Family Outof Pocket Rmn Amt</label>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <masterLabel>Outof Ntwk Family Outof Pocket Rmn Amt</masterLabel>
        <refAttrDeveloperName>OutofNtwkFamilyOutofPocketRemainingAmt</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>