force-app/main/default/objects/ssot__CoverageBenefit__dlm/fields/ssot__OutofNtwkIndividualDedRemainingAmt__c.field-meta.xml
<CustomField>
    <fullName>ssot__OutofNtwkIndividualDedRemainingAmt__c</fullName>
    <label>Outof Ntwk Individual Ded Remaining Amt</label>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <masterLabel>Outof Ntwk Individual Ded Remaining Amt</masterLabel>
        <refAttrDeveloperName>OutofNtwkIndividualDedRemainingAmt</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>