force-app/main/default/objects/ssot__CoverageBenefit__dlm/fields/ssot__OutofNtwkLifetimeCoverageMaximumAmt__c.field-meta.xml
<CustomField>
    <fullName>ssot__OutofNtwkLifetimeCoverageMaximumAmt__c</fullName>
    <label>Outof Ntwk Lifetime Coverage Maximum Amt</label>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <masterLabel>Outof Ntwk Lifetime Coverage Maximum Amt</masterLabel>
        <refAttrDeveloperName>OutofNtwkLifetimeCoverageMaximumAmt</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>